--- a/angular.json
+++ b/angular.json
@@ -134,6 +134,7 @@
   },
   "defaultProject": "ng-template",
   "cli": {
+    "analytics": false,
     "defaultCollection": "@angular-eslint/schematics"
   }
 }
