--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "ng-template",
+  "name": "ng-sample-todos",
   "version": "0.0.0",
   "license": "MIT",
   "scripts": {
@@ -21,6 +21,7 @@
     "@angular/platform-browser-dynamic": "~13.0.0",
     "@angular/router": "~13.0.0",
     "rxjs": "~7.4.0",
+    "todomvc-app-css": "^2.4.1",
     "tslib": "^2.3.0",
     "zone.js": "~0.11.4"
   },
