--- a/package.json
+++ b/package.json
@@ -20,6 +20,12 @@
     "@angular/platform-browser": "~13.0.0",
     "@angular/platform-browser-dynamic": "~13.0.0",
     "@angular/router": "~13.0.0",
+    "@ngneat/elf": "^1.0.0",
+    "@ngneat/elf-cli-ng": "^1.0.0",
+    "@ngneat/elf-devtools": "^1.0.0",
+    "@ngneat/elf-entities": "^1.0.0",
+    "@ngneat/elf-persist-state": "^1.0.0",
+    "@ngneat/elf-state-history": "^1.0.0-beta.2",
     "rxjs": "~7.4.0",
     "todomvc-app-css": "^2.4.1",
     "tslib": "^2.3.0",
